Cambios del swagger
